@@ -1,4 +1,6 @@
 == 0.8.0 Dodgy Dentist release
+ * Add very basic plugin mechanism, all gems starting with 'thin-' or 'thin_' will be loaded when
+   Thin loads.
  * Allow disabling signal handling in Server with :signals => false
  * Make Server.new arguments more flexible, can now specify any of host, port, app or hash options.
  * Add --backend option to specified which backend to use, closes #55
